<resources>
    <string name="app_name">ListApp</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="register">Register Here</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="submit">Login</string>
    <string name="loginfacebook">Login with Facebook</string>
    <string name="logingmail">Login with Gmail</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="send">Send</string>
    <string name="gundamList">Gundam list</string>
    <string name="sentContact">Sent</string>
    <string name="welcome">Welcome!</string>
    <string name="userRegistered">User registered</string>
    <string name="recoverPasswordSent">Check your email to reset your password</string>
    <string name="loggingInWithFacebook">Logging in with Facebook</string>
    <string name="loggingInWithGoogle">Logging in with Google</string>
    <string name="userNameRequired">User name is required</string>
    <string name="passwordRequired">Password is required</string>
    <string name="ivPhoneDescription">Phone button</string>
    <string name="ivMailDescription">Mail button</string>
    <string name="ivWhatsappDescription">Whatsapp button</string>
    <string name="ivAddressDescription">Address button</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="reset_password">Reset password</string>
    <string name="register_new_user">Register new user</string>
    <string name="write_valid_email">Write a valid email</string>
    <string name="password_8_char">Password should have 8 characters or more</string>
    <string name="password_must_be_the_same">Passwords must be the same</string>
    <string name="password_is_reset">Password is reset</string>
    <string name="sign_up">Sign up</string>
    <string name="change_photo">Change photo</string>
    <string name="nickname">NICKNAME</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="enter_your_birthday">Enter your birthday</string>
    <string name="form_mail">EMAIL</string>
    <string name="form_password">PASSWORD</string>
    <string name="form_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="Form_sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="logout">Logout</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="slideshow">Multimedia</string>
    <string name="galery">Programación</string>
    <string name="home">Examen</string>
    <string name="fav">Favorites</string>
    <string name="list">List</string>
    <string name="error_empty_fields">Please enter email and password</string>
    <string name="error_invalid_email">Invalid email format</string>
    <string name="error_creating_user">Error creating user</string>
    <string name="error_saving_user">Error saving user data</string>
    <string name="success_user_created">User created successfully</string>
    <string name="gundam_name">Gundam Name</string>
    <string name="this_is_a_gundam_description">This is a Gundam description...</string>
    <string name="default_web_client_id">1072754476250-a24qml4sfar177tvks2nobgkhh0d8q33.apps.googleusercontent.com</string>
    <string name="examen_prog" translatable="false">Móviles</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>