<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="@color/black">

    <!-- Campo de usuario -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="216dp"
        android:layout_height="84dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_gundam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:hint="@string/username"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AccountTextStyle"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUsuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/AccountTextStyle"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutContrasena"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/btnRegister"
            style="@style/AccountButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/register" />

        <Button
            android:id="@+id/btnForgotPassword"
            style="@style/AccountButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotpassword">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/btnLogin"
            style="@style/SocialButtonStyle"
            android:backgroundTint="@color/green"
            android:text= "@string/submit" />

        <Button
            android:id="@+id/btnFacebook"
            style="@style/SocialButtonStyle"
            android:backgroundTint="@color/blue2"
            android:drawableLeft="@drawable/_021_facebook_icon"
            android:gravity="center"
            android:text="@string/loginfacebook"/>

        <Button
            android:id="@+id/btnGoogle"
            style="@style/SocialButtonStyle"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/icongmail"
            android:text="@string/logingmail"
            app:iconSize="8dp"> </Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>